--- a/lower/src/views/login/login.scss
+++ b/lower/src/views/login/login.scss
@@ -59,9 +59,10 @@
           .leftbox{
             display: flex;
             width: 100%;
-            height:60%;
-            position: relative;
-            top: -2.4%;
+            height: 500px;
+            max-height:500px;
+            background:url('@/assets/images/login/leftimg.png') top center no-repeat;
+            background-size: 100% 90%;
             .leftline{
               display: flex;
               flex-direction: row;
